set image layout

--- a/index.html
+++ b/index.html
@@ -9,8 +9,24 @@
   </head>
   <body>
     <h1>Infinite Scrolling</h1>
-    <div class="loader" id="loader">
+
+    <div class="loader" id="loader" hidden>
       <img src="loader.svg" alt="Loading" />
+    </div>
+
+    <div class="image-container" id="image-container">
+      <img
+        src="https://images.unsplash.com/photo-1507646227500-4d389b0012be?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1507646227500-4d389b0012be?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1507646227500-4d389b0012be?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+        alt=""
+      />
     </div>
     <!-- Script -->
     <script src="script.js"></script>
