--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Infinite Scrolling</h1>
 
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
       <img src="loader.svg" alt="Loading" />
     </div>
 
